# dnsight

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  justfile  mkdocs.yml  pyproject.toml  sonar-project.properties
.cursor/rules/: main.mdc  python.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/actions/: setup.yaml
.github/actions/scan/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: changelog.yaml  ci.yaml  documentation-pages.yaml  pr-title.yaml  publish.yaml  publish.yml
docs/: configuration.md  contributing.md  index.md
docs/api/: core.md  dnsight.md  index.md
docs/cli/: _generated_nav.json  index.md
docs/cli/audit/: index.md
docs/cli/caa/: index.md
docs/cli/caa/generate/: index.md
docs/cli/config/: index.md
docs/cli/config/example/: index.md
docs/cli/config/migrate/: index.md
docs/cli/config/validate/: index.md
docs/cli/dkim/: index.md
docs/cli/dmarc/: index.md
docs/cli/dmarc/generate/: index.md
docs/cli/dnssec/: index.md
docs/cli/docs/: index.md
docs/cli/headers/: index.md
docs/cli/headers/generate/: index.md
docs/cli/mx/: index.md
docs/cli/mx/generate/: index.md
docs/cli/spf/: index.md
docs/cli/spf/generate/: index.md
docs/cli/version/: index.md
local/dnsight-configs/: README.md
src/dnsight/: __init__.py  cli.py  orchestrator.py  version.py
src/dnsight/checks/: README.md  __init__.py  base.py
src/dnsight/checks/caa/: README.md  __init__.py  models.py  rules.py
src/dnsight/checks/dkim/: README.md  __init__.py  models.py  rules.py
src/dnsight/checks/dmarc/: README.md  __init__.py  models.py  rules.py
src/dnsight/checks/dnssec/: README.md  __init__.py  models.py  rules.py
src/dnsight/checks/headers/: rules.py  (+3 more)
src/dnsight/cli/: __init__.py  _completion_common.py  _parse.py  annotations.py  helpers.py  main.py  output.py  state.py  urls.py
src/dnsight/core/: __init__.py  concurrency.py  exceptions.py  logger.py  models.py  registry.py  runtime.py  throttle.py  types.py
src/dnsight/sdk/: __init__.py  _bindings.py  _manager.py  aliases.py  generate.py  run.py  types.py
src/dnsight/sdk2/: _bindings.py  aliases.py
src/dnsight/serialisers/: __init__.py  _data_summary.py  _finding_format.py  _generic_data.py  _zone.py  base.py  json.py  markdown.py  rich.py  sarif.py  tree.py  writer.py
src/dnsight/utils/: README.md  __init__.py  dns.py  dnssec_support.py  http.py  smtp.py
tests/: conftest.py  test_audit_cli_helpers.py  test_cli.py  test_cli_annotations.py  test_cli_audit.py  test_cli_check_base_units.py  test_cli_config_validate.py  test_cli_generate_and_overlays.py  test_cli_output_emit.py  test_cli_output_exit_codes.py  test_cli_parse_helpers.py  test_cli_per_check_invoke.py  test_cli_resolve_targets.py  test_cli_state.py  test_docgen.py  test_orchestrator.py  test_package.py  test_sdk.py  test_structured_logging.py
tests/checks/: test_base.py  test_caa.py  test_dkim.py  test_dmarc.py  test_dmarc_rules.py  test_dnssec.py  test_headers.py  test_init.py  test_mx.py  test_spf.py
tests/cli/: test_completion_common.py
tests/core/: test_concurrency.py  test_enums.py  test_exceptions.py  test_logger.py  test_models.py  test_registry.py  test_runtime.py  test_throttle.py
tests/core/config/: test_blocks.py  test_config_manager.py  test_defaults.py  test_iter_existing_config_paths.py  test_mergeable.py  test_pattern.py  test_targets.py
tests/sdk/: test_bindings.py  test_types.py
tests/sdk/audit/: __init__.py  test_fold.py  test_models.py
tests/serialisers/: conftest.py  test_base.py  test_data_summary.py  test_finding_format.py  test_json.py  test_markdown.py  test_rich.py  test_sarif.py  test_tree.py  test_zone.py
tests/utils/: test_dns.py  test_http.py
tools/: __init__.py  dnsight-completion.zsh
tools/docgen/: __init__.py  __main__.py  generate.py  hooks.py
(+53 files in other folders)
