[project]
name = "dnsight"
dynamic = ["version"]
description = "DNS, email, and web security hygiene SDK and CLI for DevOps and security engineers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mikey Scott" }]
keywords = [
  "dns",
  "dmarc",
  "spf",
  "dkim",
  "dnssec",
  "security",
  "cli",
  "devops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: Security",
  "Topic :: System :: Networking",
]

dependencies = [
  "cryptography>=43.0.0,<47.0.0",
  "dnspython>=2.8.0,<3.0.0",
  "httpx>=0.28.1,<0.29.0",
  "pydantic>=2.12.5,<3.0.0",
  "pyyaml>=6.0.3,<7.0.0",
  "rich>=14.3.3,<15.0.0",
  "typer>=0.24.1,<0.25.0",
]

[project.urls]
"Homepage" = "https://github.com/dnsight/dnsight"
"Repository" = "https://github.com/dnsight/dnsight"
"Issues" = "https://github.com/dnsight/dnsight/issues"
"Changelog" = "https://github.com/dnsight/dnsight/blob/main/CHANGELOG.md"


[project.scripts]
dnsight = "dnsight.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dnsight"]

[tool.uv]
required-version = ">=0.10.7"

[dependency-groups]
dev = [
  # CI/CD
  "hatch-vcs>=0.5.0,<0.6.0",
  "pre-commit>=4.0.0,<5.0.0",
  # Linting + Formatting
  "ruff>=0.15.5,<1.0.0",
  "mypy>=1.19.1,<2.0.0",
  "yamllint>=1.38.0,<2.0.0",
  "yamlfix>=1.19.1,<2.0.0",
  "check-jsonschema>=0.37.0,<1.0.0",
  "taplo>=0.9.3,<1.0.0",
  "types-pyyaml>=6.0.12.20250915,<7.0.0.0",
  # Testing
  "pytest>=9.0.2,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "hypothesis>=6.151.9,<7.0.0",
  "mutmut>=3.5.0,<4.0.0",
  "towncrier>=24.7.0,<26.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["dnsight"]
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "registry_builtins: keep built-in check registrations (skip registry isolation)",
]
testpaths = ["tests"]
addopts = "--cov=src/dnsight --cov-report=term-missing --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"

[tool.coverage.run]
source = ["src/dnsight"]
omit = ["*/tests/**"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/dnsight/dnsight/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/dnsight/dnsight/pull/{issue})"

[[tool.towncrier.type]]
name = "Security"

[[tool.towncrier.type]]
name = "Feature"

[[tool.towncrier.type]]
name = "Bugfix"

[[tool.towncrier.type]]
name = "Patch"

[[tool.towncrier.type]]
name = "Other"

[tool.yamlfix]
whitelines = 1                # preserve single blank lines between list items etc.
section_whitelines = 1        # preserve blank lines between top-level sections
explicit_start = false        # remove --- at top of file if you don't want it
sequence_style = "keep_style" # don't convert between flow/block list styles
